Added Founders Accordion and all the exercises

--- a/aboutus.html
+++ b/aboutus.html
@@ -55,13 +55,121 @@
 
             <div class="col-12">
                 <h1>About Us</h1>
+                <hr>
+            </div>
+        </div>
+
+        <div class="row row-content">
+            <div class="col-12">
+                <h2>Our Founders</h2>
+            </div>
+            <div class="col-12 col-sm-6">
+                <div id="accordion">
+                    <div class="card">
+                        <div role="tab" class="card-header">
+                            <h3 class="text-white" data-toggle="collapse" data-target="#aditya">Aditya Ramchandra Dalvi</h3>
+                        </div>
+                        <div role="tabpanel" class="collapse show" id="aditya" data-parent="#accordion">
+                            <div class="card-body">
+                                <div class="media align-items-center">
+                                    <img src="img/alberto.png" class="d-flex img-thumbnail rounded-circle img-fluid mr-3">
+                                    <div class="media-body">
+                                        <p>Hi, I am Aditya Ramchandra Dalvi. I am currently pursuing B.Tech at Vellore Institute of Technology, Vellore in Electronics and Communication Engineering.</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row justify-content-center">
+                                    <div class="col-auto">
+                                        <a class="btn btn-social-icon btn-instagram" href="#"><span class="fa fa-instagram"></a>
+                                        <a class="btn btn-social-icon btn-linkedin" href="#"><span class="fa fa-linkedin"></a>
+                                        <a class="btn btn-social-icon btn-facebook" href="#"><span class="fa fa-facebook"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div role="tab" class="card-header">
+                            <h3 class="text-white" data-toggle="collapse" data-target="#sandeep">Krishna Sandeep</h3>
+                        </div>
+                        <div role="tabpanel" class="collapse" id="sandeep" data-parent="#accordion">
+                            <div class="card-body">
+                               <div class="media align-items-center">
+                                   <img src="img/alberto.png" class="d-flex img-thumbnail rounded-circle img-fluid mr-3">
+                                   <div class="media-body">
+                                        <p>Hi, I am Aditya Ramchandra Dalvi. I am currently pursuing B.Tech at Vellore Institute of Technology, Vellore in Electronics and Communication Engineering.</p>
+                                   </div>
+                               </div> 
+                               <hr>
+                               <div class="row justify-content-center">
+                                   <div class="col-auto">
+                                       <a class="btn btn-social-icon btn-instagram" href="#"><span class="fa fa-instagram"></span></a>
+                                       <a class="btn btn-social-icon btn-linkedin" href="#"><span class="fa fa-linkedin"></span></a>
+                                       <a class="btn btn-social-icon btn-facebook" href="#"><span class="fa fa-facebook"></span></a>
+                                   </div>
+                               </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div role="tab" class="card-header">
+                            <h3 class="text-white" data-toggle="collapse" data-target="#anant">Anant Sah</h3>
+                        </div>
+                        <div role="tabpanel" class="collapse" id="anant" data-parent="#accordion">
+                            <div class="card-body">
+                                <div class="media align-items-center">
+                                    <img src="img/alberto.png" class="d-flex img-thumbnail rounded-circle img-fluid mr-3">
+                                    <div class="media-body">
+                                        <p>Hi, I am Aditya Ramchandra Dalvi. I am currently pursuing B.Tech at Vellore Institute of Technology, Vellore in Electronics and Communication Engineering.</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row justify-content-center">
+                                    <div class="col-auto">
+                                        <a class="btn btn-social-icon btn-instagram" href="#"><span class="fa fa-instagram"></span></a>
+                                        <a class="btn btn-social-icon btn-linkedin" href="#"><span class="fa fa-linkedin"></span></a>
+                                        <a class="btn btn-social-icon btn-facebook" href="#"><span class="fa fa-facebook"></span></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div role="tab" class="card-header">
+                            <h3 class="text-white" data-toggle="collapse" data-target="#prajwal">Prajwal Sakharkar</h3>
+                        </div>
+                        <div role="tabpanel" class="collapse" id="prajwal" data-parent="#accordion">
+                            <div class="card-body">
+                                <div class="media align-items-center">
+                                    <img src="img/alberto.png" class="d-flex img-thumbnail rounded-circle img-fluid mr-3">
+                                    <div class="media-body">
+                                        <p>Hi, I am Aditya Ramchandra Dalvi. I am currently pursuing B.Tech at Vellore Institute of Technology, Vellore in Electronics and Communication Engineering.</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row justify-content-center">
+                                    <div class="col-auto">
+                                        <a class="btn btn-social-icon btn-instagram" href="#"><span class="fa fa-instagram"></span></a>
+                                        <a class="btn btn-social-icon btn-linkedin" href="#"><span class="fa fa-linkedin"></span></a>
+                                        <a class="btn btn-social-icon btn-facebook" href="#"><span class="fa fa-facebook"></span></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
+                </div>
             </div>
         </div>
     </div>
 
     <footer class="footer">
             <div class="container">
-                <div class="row footer-row-content align-items-center justify-content-center">
+                <div class="row align-items-center justify-content-center">
                     <div class="col-7 col-sm-4">
                         <h3>Follow us</h3>
                         <a class="btn btn-social-icon btn-instagram" href=""><span class="fa fa-instagram fa-lg"></span></a>
