--- a/contactus.html
+++ b/contactus.html
@@ -94,7 +94,7 @@
    
         <div class="row row-content">
             <div class"col-12">
-                <h2>Write back to us</h2>
+                <h2><u>Write back to us</u></h2>
                 <form>
                     <div class="form-group row">
                         <label for="firstname" class="col-md-4 col-form-label">First Name</label>
@@ -169,7 +169,7 @@
 
     <footer class="footer">
             <div class="container">
-                <div class="row footer-row-content align-items-center justify-content-center">
+                <div class="row align-items-center justify-content-center">
                     <div class="col-7 col-sm-4">
                         <h3>Follow us</h3>
                         <a class="btn btn-social-icon btn-instagram" href=""><span class="fa fa-instagram fa-lg"></span></a>
